--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,27 @@
     <maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
   </properties>
 
+  <repositories>
+    <repository>
+      <id>nexus</id>
+      <url>http://192.168.5.75:8081/repository/abhishek/</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
+
+  <distributionManagement>
+    <repository>
+      <id>nexus</id>
+      <name>Abhishek Repository</name>
+      <url>http://192.168.5.75:8081/repository/abhishek/</url>
+    </repository>
+  </distributionManagement>
+
   <build>
     <plugins>
       <plugin>
@@ -35,4 +56,5 @@
       </plugin>
     </plugins>
   </build>
+
 </project>
