--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,3 +26,8 @@ jobs:
       # Build the project
       - name: Build with Maven
         run: mvn -B clean package
+      - name: Upload JAR Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: built-jar
+          path: target/*.jar
